# CSC367

./: README.md
A1/: plagiarism.txt
A1/part1/: Makefile  parse.py  part1.c  time_util.h
A1/part2/: Makefile  data.c  data.h  datagen.c  options.c  options.h  part2-parallel-opt.c  part2-parallel.c  part2.c  part2_data_gen.c
A2/: .gitignore  CMakeLists.txt  INFO.txt  README.md  filters.cpp  filters.h  generate_graphs_script.sh  main.cpp  my_generate_graphs.py  perfs_student.py  pgm.cpp  pgm.h  pgm_creator.cpp  plotter.py  tests.cpp
A3/: Makefile  commands.txt  data.c  data.h  join-mpi.c  join-omp.c  join-seq.c  join.c  join.h  my_generate_graphs.py  options.c  options.h  plotter.py
